--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
     <artifactId>spring-jdbc</artifactId>
     <version>3.0.3.RELEASE</version>
 </dependency>
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>2.7.22</version>
+</dependency>
 	</dependencies>
 	<build>
 		<finalName>WeeklyLifeBingoMvn</finalName>
